force-app/main/default/objects/RE_Zema_Quotes_Settings__c/RE_Zema_Quotes_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Zema Quotes for Canada</description>
    <label>RE Zema Quotes Settings</label>
</CustomObject>