force-app/main/default/objects/RE_Zema_Quotes_Settings__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>