force-app/main/default/objects/RE_Zema_Quotes_Settings__c/fields/Price_to_be_converted__c.field-meta.xml
<CustomField>
    <fullName>Price_to_be_converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price to be converted?</label>
    <type>Checkbox</type>
</CustomField>