force-app/main/default/objects/RE_Zema_Quotes_Settings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>differentiate between settlement quotes and fx rates</description>
    <label>Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>